--- a/coba.html
+++ b/coba.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Welcome to Sugi Space</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+            flex-direction: column;
+        }
+
+        h1 {
+            font-size: 5em;
+            font-weight: bold;
+            color: #ff6347; /* Tomato red */
+            background-image: linear-gradient(to right, #ff6347, #ffcc00);
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4);
+            letter-spacing: 5px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 2em;
+            color: #333;
+            margin-top: 0;
+            letter-spacing: 2px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is my personal site hosted on GitHub Pages.</p>
+    <div>
+        <p>Welcome to</p>
+        <h1>Sugi</h1>
+        <p>Sugi Space</p>
+    </div>
 </body>
 </html>
